QPID-3488: Ensure that message-stop clears any outstanding credit 'window'

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1171174 13f79535-47bb-0310-9956-ffa450edef68